fix(web-components): fix icon slots for button and side nav where svg is wrapped in an element
Fix icon slots for button and side nav where svg is wrapped in an element

--- a/packages/web-components/src/components/ic-button/ic-button.css
+++ b/packages/web-components/src/components/ic-button/ic-button.css
@@ -326,7 +326,7 @@ div.icon-container {
   align-items: center;
 }
 
-::slotted(svg) {
+::slotted(*) {
   width: var(--icon-width) !important;
   height: var(--icon-height) !important;
   fill: currentcolor !important;
